[metadata]
name = cloudconvert
version = 1.0.0
author = Josias Montag
author-email = info@cloudconvert.com
home-page = https://cloudconvert.com
summary = Official CloudConvert API wrapper
description-file = README.rst
license = BSD
platforms = "Posix; MacOS X; Windows"
requires-dist =
    setuptools
    requests>=2.3.0
    multidimensional_urlencode>=0.0.3
    d2to1==0.2.11
classifier =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
keywords =
    cloudconvert
    convert
    rest

[files]
packages = cloudconvert

[test]
test-suite = nose.collector

[nosetests]
verbosity = 2
where = tests/
with-yanc = 1
with-coverage = 1
cover-package = cloudconvert
cover-erase = 1